--- a/index.css
+++ b/index.css
@@ -12,6 +12,7 @@ body{
   
   .number{
     font-size:80pt;
+    color:navy;
     margin:2px;
     border-style:solid;
     border-width:1px;
@@ -19,7 +20,10 @@ body{
     box-shadow: 0 0 2px gray;
     text-shadow: 0 0 1px black;
     border-radius:5px;
+    display:flex;
+    justify-content:center;
   }
+
   
   .button{
     margin:2px;
