--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body{
   
   .number{
     font-size:80pt;
-    color:red;
+    color:navy;
     margin:2px;
     border-style:solid;
     border-width:1px;
